interface Graphic {
    void draw();
}
