class Circle implements Graphic {

    @Override
    public void draw() {
        System.out.println("Dibujando círculo");
    }
}
